[package]
name = "max_subarray"
version = "0.1.0"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "0.7.3"

[[bench]]
name = "my_benchmark"
harness = false
